--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "scripts": {
     "server": "nodemon backend/index.js",
     "client": "npm start --prefix frontend ",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "data:import": "node ./backend/seeder.js"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": { 
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "concurrently": "^8.0.1",
