--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-confirm-alert": "^3.0.6",
     "react-datepicker": "^4.12.0",
     "react-dom": "18.2.0",
+    "react-html-table-to-excel": "^2.0.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.0.7",
     "react-router-dom": "6.4.2",
